--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
-@import '../src/assets/mixin.scss';
+@import '../src/assets/mixin_flex.scss';
+@import '../src/assets/mixin_box.scss';
 body {
     margin: 0;
     height: 100vh;
