--- a/src/components/Menu/Menu.less
+++ b/src/components/Menu/Menu.less
@@ -82,6 +82,7 @@ a {
   &__registration,
   &__authorization {
     overflow-y: scroll;
+    max-height: 90%;
     &_verify {
       .x {
         transform: translate(430px, -40px) !important;
