--- a/src/assets/design.less
+++ b/src/assets/design.less
@@ -14,3 +14,10 @@
   -moz-border-radius: @radius;
   border-radius: @radius;
 }
+
+.linear-gradient(@deg, @start, @end){
+  background-image: -webkit-linear-gradient(@deg, @start, @end);
+  background-image:    -moz-linear-gradient(@deg, @start, @end);
+  background-image:      -o-linear-gradient(@deg, @start, @end);
+  background-image:     -ms-linear-gradient(@deg, @start, @end);
+}
