--- a/src/assets/design.less
+++ b/src/assets/design.less
@@ -21,3 +21,10 @@
   background-image:      -o-linear-gradient(@deg, @start, @end);
   background-image:     -ms-linear-gradient(@deg, @start, @end);
 }
+
+.transition(@arguments) {
+  -webkit-transition: @arguments;
+  -moz-transition: @arguments;
+  -o-transition: @arguments;
+  transition: @arguments;
+}
