--- a/src/components/Menu/Menu.less
+++ b/src/components/Menu/Menu.less
@@ -5,6 +5,14 @@ ul {
 a {
   text-decoration: none;
 }
+
+.mob__hidden {
+
+  @media (max-width: 1140px) {
+    display: none !important;
+  } 
+}
+
 .menu {
   &__box {
     max-width: 1180px;
@@ -12,17 +20,31 @@ a {
     padding: 0 40px;
     .flex-display(flex);
     .justify-content(space-between);
+    @media (max-width: 1140px) {
+      .flex-direction(column);
+      .justify-content(flex-start)
+    }
     &_navigation {
       display: flex;
-      margin: 25px 20px 0 20px;
+      margin: 25px 20px 0 5px;
       padding: 0;
+      @media (max-width: 1140px) {
+        .flex-direction(column);
+        
+      }
       li {
         list-style: none;
         margin-right: 40px;
+        @media (max-width: 1140px) {
+          margin-top: 40px;
+        }
         a {
           text-decoration: none;
           color: black;
+          
         }
+        font-size: 18px;
+        line-height: 22.63px;
       }
     }
     &_logo {
@@ -33,6 +55,7 @@ a {
       font-size: 24px;
       border-radius: 50%;
       margin-top: 15px;
+      transform: scale(0.9) translate(-40px, 0);
       .flex-display(flex);
       .justify-content(center);
       .align-items(center);
@@ -40,15 +63,38 @@ a {
         margin-right: 15px;
         width: 46px;
       }
+      @media (max-width: 1140px) {
+        .justify-content(flex-start)
+      }
     }
     &_items {
       .flex-display(flex);
+      @media (max-width: 1140px) {
+        .flex-direction(column);
+
+        padding: 0;
+        margin: 30vh 0 0 0;
+        
+      }
       .item_auth {
         margin: 25px 0 0 55px;
         list-style: none;
         font-weight: 400;
+        border-radius: 10px;
         a {
           color: #232426;
+        }
+        @media (max-width: 1140px) {
+          .flex-display(block);
+          padding: 16px;
+          margin: 0;
+          text-align: center;
+          
+          background-color: #784ADC;
+          a {
+            color: white;
+            font-weight: 500;
+          } 
         }
       }
       .item_registration {
@@ -65,6 +111,14 @@ a {
         }
         &:hover {
           background-color: #d9d9d9;
+        }
+        @media (max-width: 1140px) {
+          .flex-display(block);
+          padding: 16px;
+          margin: 0;
+          text-align: center;
+          margin-top: 12px ;
+          font-weight: 500;
         }
       }
     }
