--- a/src/pages/Home/Home.less
+++ b/src/pages/Home/Home.less
@@ -1,11 +1,15 @@
 @import "../../assets/flex.less";
 
 .home-header {
-  width: 1080px;
+  max-width: 1080px;
   margin: 50px auto;
+  
   &__box {
     .flex-display(flex);
     padding: 0 50px;
+    @media (max-width: 1020px) {
+      .flex-direction(column)
+    }
     &_subtitle {
       width: 500px;
       font-size: 28px;
@@ -13,6 +17,10 @@
       line-height: 34px;
       margin-top: 150px;
       margin-right: 100px;
+      @media (max-width: 1020px) {
+        width: 100%;
+        margin: 0 auto;
+      }
       span {
         font-family: "Comfortaa";
         font-weight: 700;
@@ -29,6 +37,16 @@
     &_image {
       position: relative;
       z-index: -1;
+      transform: scale(0.8);
+     @media (max-width: 1040px) {
+      position: absolute;
+      left: 150px;
+      top: 620px;
+     }
+     @media (max-width: 560px) {
+      left: 60px;
+      top: 680px;
+     }
       div:first-child {
         position: absolute;
         border-radius: 50%;
@@ -71,6 +89,10 @@
    text-align: center;
    margin-top: 120px;
    padding: 0 20px;
+   @media (max-width: 1020px) {
+    width: 90%;
+    margin-top: 70px;
+   }
     button {
     color: white;
     padding: 15px 38px;
@@ -82,6 +104,9 @@
     font-weight: 600;
     font-size: 18px;
     cursor: pointer;
+    @media (max-width: 1020px) {
+      width: 90%;
+     }
   }
 }
 }
