--- a/src/pages/Main/Main.less
+++ b/src/pages/Main/Main.less
@@ -1,3 +1,10 @@
+@import '../../assets/flex.less';
+
 .main {
-    display: flex;
+    .flex-display(flex);
+    max-width: 1260px;
+    margin: 0 auto;
+    &__box {
+        margin: 0 25px;
+    }
 }
