--- a/src/components/Menu/Menu.less
+++ b/src/components/Menu/Menu.less
@@ -38,6 +38,9 @@ a {
         @media (max-width: 1140px) {
           margin-top: 40px;
         }
+        .active {
+          color: #784ADC;
+        }
         a {
           text-decoration: none;
           color: black;
@@ -55,7 +58,7 @@ a {
       font-size: 24px;
       border-radius: 50%;
       margin-top: 15px;
-      transform: scale(0.9) translate(-40px, 0);
+      transform: scale(0.9) translate(0, 0);
       .flex-display(flex);
       .justify-content(center);
       .align-items(center);
@@ -65,6 +68,9 @@ a {
       }
       @media (max-width: 1140px) {
         .justify-content(flex-start)
+      }
+      @media (max-width: 600px) {
+        display: none;
       }
     }
     &_items {
@@ -148,6 +154,9 @@ a {
     width: 300px;
     .flex-display(flex);
     .flex-direction(column);
+   @media (max-width: 1140px) {
+    display: none;
+   }
     ul {
       margin: 0;
      padding: 0 20px;
