--- a/src/index.less
+++ b/src/index.less
@@ -1,28 +1,71 @@
-@import '../src/assets/flex.less';
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap');
+@import "../src/assets/flex.less";
+@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap");
 body {
-    margin: 0;
-    height: 100vh;
-    // font-family: 'Comfortaa';
-    font-family: 'Source Sans Pro', sans-serif;
-    background:  white; 
-
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  // font-family: 'Comfortaa';
+  font-family: "Source Sans Pro", sans-serif;
+  background: white;
 }
 
 .drop__menu {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    transform: translate(92%, 40px);
-    cursor: pointer;
-    display: none;
-    @media (max-width: 1140px) {
-        display: block;
+  position: absolute;
+  top: 40px;
+  left: 92%;
+  right: 0;
+  bottom: 0;
+  cursor: pointer;
+  display: none;
+  @media (max-width: 1140px) {
+    display: block;
+  }
+
+}
+
+.show {
+  display: flex !important;
+}
+
+.flex {
+  .flex-display(flex);
+  .flex-direction(row) !important;
+  .justify-content(space-between) !important;
+}
+
+.isProfileLogo {
+  @media (max-width: 1140px) {
+    transform: translate(40px, 0);
+  }
+}
+
+.drop_profile_menu {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.2);
+  &_nav {
+    position: relative;
+    height: 100vh;
+    width: 300px;
+    background-color: white;
+    z-index: 5;
+  }
+  
+}
+.d-trsfm {
+  padding-top: 100px;
+  margin-left: 30px;
+  display: block !important;
+  position: relative;
+  z-index: 2;
+  li {
+    width: 180px !important;
+    a {
+      width: 180px !important;
     }
-    @media (max-width: 420px) {
-        transform: translate(76%, 40px);
-    }
+  }
 }
