--- a/src/pages/Profile/Profile.less
+++ b/src/pages/Profile/Profile.less
@@ -1,82 +1,116 @@
-@import '../../assets/flex.less';
+@import "../../assets/flex.less";
 
 fieldset {
-    border: none;
-    padding: 0;
-    margin: 0;
+  border: none;
+  padding: 0;
+  margin: 0;
 }
 
 .profile {
-    max-width: 1260px;
-    margin: 0 auto;
-    .flex-display(flex);
-    &__box {
-        width: 600px;
-        margin-left: 20px;
-        padding: 0px 25px;
-        
-        &_media {
-            padding-bottom: 30px;
-            border-bottom: 1px solid #D3D3D4;
-            h2 {
-                display: inline-block;
-                font-size: 24px;
-                font-weight: 700;
-            }
-            span {
-                float: right;
-                margin-top: 25px;
-                color: #4F5052;
-                a {
-                    color: #571CD3;
-                }
-            }
-            &_photo {
-                .flex-display(flex);
-                .justify-content(space-between);
-                .align-items(center);
-                button {
-                    width: 180px;
-                    height: 50px;
-                    outline: 0;
-                    border: none;
-                    background-color: #F2F2F2;
-                    border-radius: 10px;
-                    cursor: pointer;
-                }
-                .del {
-                    img {
-                        transform: translate(30px, 5px);
-                        cursor: pointer;
-                    }
-                }
-            }
-           
-        }
-        &_settings {
-            label {
-                display: block;
-                font-size: 16px;
-                margin: 25px 0 16px 0;
-            } 
-            input {
-                padding: 12px 16px;
-                outline: 0;
-                border: 1px solid #D3D3D4;
-                border-radius: 10px;
-                width: 50%;
-                margin-top: 5px;
-            }
-            button {
-                width: 180px;
-                height: 50px;
-                outline: 0;
-                border: none;
-                background-color: #F2F2F2;
-                border-radius: 10px;
-                cursor: pointer;
-                float: right;
-            }
-     }
+  max-width: 1260px;
+  margin: 0 auto;
+  .flex-display(flex);
+  &__media-mob {
+    @media (max-width: 1140px) {
+      display: none;
     }
+  }
+  &__box {
+    width: 600px;
+    margin-bottom: 50px;
+    margin: 0px 25px;
+    @media (max-width: 1140px) {
+      width: 100%;
+    }
+    &_media {
+      padding-bottom: 30px;
+      border-bottom: 1px solid #d3d3d4;
+      h2 {
+        display: inline-block;
+        font-size: 24px;
+        font-weight: 700;
+      }
+      span {
+        float: right;
+        margin-top: 25px;
+        color: #4f5052;
+        a {
+          color: #571cd3;
+        }
+      }
+      &_photo {
+        .flex-display(flex);
+        .justify-content(space-between);
+        .align-items(center);
+        button {
+          width: 180px;
+          height: 50px;
+          outline: 0;
+          border: none;
+          background-color: #f2f2f2;
+          border-radius: 10px;
+          cursor: pointer;
+          transition: 0.5s;
+        }
+        button:hover {
+            background-color: #784adc;
+            color: white;
+        }
+        .del {
+          .flex-display(flex);
+          img {
+            transform: translate(15px, 10px);
+            cursor: pointer;
+          }
+          span {
+            display: inline-block;
+            @media (max-width: 640px) {
+              display: none;
+            }
+          }
+        }
+      }
+    }
+    &_settings {
+      label {
+        display: block;
+        font-size: 16px;
+        margin: 25px 0 16px 0;
+      }
+      input {
+        padding: 12px 16px;
+        outline: 0;
+        border: 1px solid #d3d3d4;
+        border-radius: 10px;
+        width: 50%;
+        margin-top: 5px;
+        @media (max-width: 1140px) {
+          width: 95%;
+          margin-bottom: 20px;
+        }
+      }
+      button {
+        width: 180px;
+        height: 50px;
+        outline: 0;
+        border: none;
+        background-color: #f2f2f2;
+        border-radius: 10px;
+        cursor: pointer;
+        float: right;
+        transition: 0.5s;
+      }
+      button:hover {
+        background-color:#784adc;
+        color: white;
+    }
+    }
+  }
+  .drop__menu {
+    top: 0;
+    left: 0;
+    transform: translate(50px, 50px);
+    width: 150px;
+    height: 75px;
+  }
 }
