modifications__templates-list

--- a/src/pages/Profile/Profile.less
+++ b/src/pages/Profile/Profile.less
@@ -109,8 +109,11 @@ fieldset {
   .drop__menu {
     top: 0;
     left: 0;
-    transform: translate(50px, 50px);
+    transform: translate(20px, 50px);
     width: 150px;
     height: 75px;
+    .logo {
+      transform: translate(30px, 0);
+    }
   }
 }
