--- a/src/components/Menu/Menu.less
+++ b/src/components/Menu/Menu.less
@@ -30,12 +30,15 @@ a {
       padding: 0;
       @media (max-width: 1140px) {
         .flex-direction(column);
-        
+        padding-bottom: 25px;
+        border-bottom: 1px solid #D9D9D9;
       }
       li {
         list-style: none;
         margin-right: 40px;
+       
         @media (max-width: 1140px) {
+          max-width: 160px;
           margin-top: 40px;
         }
         .active {
@@ -49,6 +52,33 @@ a {
         font-size: 18px;
         line-height: 22.63px;
       }
+      &_profile {
+        margin-top: 30px;
+        @media (min-width: 1140px) {
+          display: none;
+        }
+        .flex-display(flex);
+        .justify-content(space-between);
+        a {
+          margin: auto 0;
+        }
+        &-info {
+          .flex-display(flex);
+         
+          .info {
+            .flex-display(flex);
+            .flex-direction(column);
+            margin-left: 20px;
+
+            span {
+              color: #7B7C7D;
+              font-size: 16px;
+              margin-top: 10px;
+            }
+            
+          }
+        }
+      }
     }
     &_logo {
       color: #232426;
@@ -58,16 +88,18 @@ a {
       font-size: 24px;
       border-radius: 50%;
       margin-top: 15px;
-      transform: scale(0.9) translate(0, 0);
+     
       .flex-display(flex);
       .justify-content(center);
       .align-items(center);
+      
       img {
         margin-right: 15px;
         width: 46px;
       }
       @media (max-width: 1140px) {
-        .justify-content(flex-start)
+        .justify-content(flex-start);
+        transform: scale(0.9) translate(-50px, 0);
       }
       @media (max-width: 600px) {
         display: none;
@@ -151,7 +183,7 @@ a {
     }
   }
   &__join_navigation {
-    width: 300px;
+    min-width: 300px;
     .flex-display(flex);
     .flex-direction(column);
    @media (max-width: 1140px) {
@@ -159,7 +191,7 @@ a {
    }
     ul {
       margin: 0;
-     padding: 0 20px;
+      padding: 0 0 0 20px;
       li {
         list-style: none;
         width: 220px;
