--- a/src/index.less
+++ b/src/index.less
@@ -18,6 +18,8 @@ body {
   bottom: 0;
   cursor: pointer;
   display: none;
+  width: 80px;
+  height: 80px;
   @media (max-width: 1140px) {
     display: block;
   }
@@ -36,7 +38,7 @@ body {
 
 .isProfileLogo {
   @media (max-width: 1140px) {
-    transform: translate(40px, 0);
+    transform: translate(60px, 0);
   }
 }
 
