--- a/src/index.less
+++ b/src/index.less
@@ -18,14 +18,13 @@ body {
   bottom: 0;
   cursor: pointer;
   display: none;
-  width: 80px;
-  height: 80px;
+  width: 35px;
+  height: 30px;
   @media (max-width: 1140px) {
     display: block;
+    
   }
-
 }
-
 .show {
   display: flex !important;
 }
@@ -44,7 +43,7 @@ body {
 
 .drop_profile_menu {
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   position: fixed;
   top: 0;
   left: 0;
@@ -59,7 +58,7 @@ body {
   
 }
 .d-trsfm {
-  padding-top: 100px;
+  padding-top: 50px;
   margin-left: 30px;
   display: block !important;
   position: relative;
@@ -70,4 +69,13 @@ body {
       width: 180px !important;
     }
   }
+}
+.hidden {
+  display: none !important;
+}
+.block {
+  display: block !important;
+}
+.logo_ {
+  cursor: pointer;
 }
