--- a/src/pages/Profile/Profile.less
+++ b/src/pages/Profile/Profile.less
@@ -61,6 +61,8 @@ fieldset {
           img {
             transform: translate(15px, 10px);
             cursor: pointer;
+            position: relative;
+            z-index: -1;
           }
           span {
             display: inline-block;
