--- a/src/index.less
+++ b/src/index.less
@@ -1,6 +1,7 @@
 @import "../src/assets/flex.less";
 @import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap");
+@import "node_modules/normalize.less/normalize.less";
 body {
   margin: 0;
   padding: 0;
@@ -23,6 +24,10 @@ body {
   @media (max-width: 1140px) {
     display: block;
     
+  }
+  @media (max-width: 400px) {
+    left: 86%;
+    top: 20px;
   }
 }
 .show {
