--- a/src/assets/design.less
+++ b/src/assets/design.less
@@ -28,3 +28,9 @@
   -o-transition: @arguments;
   transition: @arguments;
 }
+
+.transform(@arguments) {
+  -webkit-transform: @arguments;
+     -ms-transform: @arguments;
+         transform: @arguments
+}
