--- a/src/index.less
+++ b/src/index.less
@@ -1,11 +1,12 @@
 @import "../src/assets/flex.less";
+@import "../src/assets/design.less";
 @import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap");
-@import "node_modules/normalize.less/normalize.less";
+@import './pages/Home/Home.less';
 body {
   margin: 0;
   padding: 0;
-  height: 100vh;
+  // height: 100vh;
   // font-family: 'Comfortaa';
   font-family: "Source Sans Pro", sans-serif;
   background: white;
@@ -25,7 +26,7 @@ body {
     display: block;
     
   }
-  @media (max-width: 400px) {
+  @media (max-width: 420px) {
     left: 86%;
     top: 20px;
   }
@@ -42,7 +43,7 @@ body {
 
 .isProfileLogo {
   @media (max-width: 1140px) {
-    transform: translate(60px, 0);
+    .transform(translate(60px, 0));
   }
 }
 
@@ -83,4 +84,8 @@ body {
 }
 .logo_ {
   cursor: pointer;
+}
+
+.format-settings {
+  
 }
