--- a/src/pages/Main/Main.less
+++ b/src/pages/Main/Main.less
@@ -2,10 +2,13 @@
 
 .main {
     .flex-display(flex);
-    max-width: 1260px;
+    max-width: 100% !important;
     margin: 0 auto;
     &__box {
         margin: 0 25px;
+    }
+    &__list {
+        
     }
 }
 
