--- a/src/pages/Profile/Profile.less
+++ b/src/pages/Profile/Profile.less
@@ -1,5 +1,5 @@
 @import "../../assets/flex.less";
-
+@import "../../assets/design.less";
 fieldset {
   border: none;
   padding: 0;
@@ -7,7 +7,7 @@ fieldset {
 }
 
 .profile {
-  max-width: 1260px;
+  max-width: 100%;
   margin: 0 auto;
   .flex-display(flex);
   &__media-mob {
@@ -50,7 +50,7 @@ fieldset {
           background-color: #f2f2f2;
           border-radius: 10px;
           cursor: pointer;
-          transition: 0.5s;
+          .transition(0.5s);
         }
         button:hover {
             background-color: #784adc;
@@ -58,11 +58,15 @@ fieldset {
         }
         .del {
           .flex-display(flex);
-          img {
-            transform: translate(15px, 10px);
-            cursor: pointer;
+          @media (max-width: 420px) {
+            .transform(translate(100px, -50px));
             position: relative;
             z-index: -1;
+          }
+          img {
+            .transform(translate(15px, 10px));
+            cursor: pointer;
+           
           }
           span {
             display: inline-block;
@@ -100,7 +104,7 @@ fieldset {
         border-radius: 10px;
         cursor: pointer;
         float: right;
-        transition: 0.5s;
+        .transition(0.5s)
       }
       button:hover {
         background-color:#784adc;
@@ -111,11 +115,11 @@ fieldset {
   .drop__menu {
     top: 0;
     left: 0;
-    transform: translate(20px, 50px);
+    .transform(translate(20px, 50px));
     width: 150px;
     height: 75px;
     .logo {
-      transform: translate(30px, 0);
+      .transform(translate(30px, 0));
     }
   }
 }
