--- a/src/pages/Projects/Projects.less
+++ b/src/pages/Projects/Projects.less
@@ -1,7 +1,7 @@
 @import '../../assets/flex.less';
 
 .projects {
-    max-width: 1260px;
+    max-width: 100%;
     .flex-display(flex);
     margin: 0 auto;
     &__box {
