--- a/src/features/Menu/Menu.less
+++ b/src/features/Menu/Menu.less
@@ -369,6 +369,7 @@ a {
 .e-menu {
   .flex-display(flex);
   .justify-content(space-between);
+  border-bottom: 1px solid #dcdcdc;
   ul {
     .flex-display(flex);
     .align-items(center);
