--- a/src/pages/GraphicsEditor/GraphicsEditor.less
+++ b/src/pages/GraphicsEditor/GraphicsEditor.less
@@ -1,119 +1,188 @@
-@import '../../assets/design.less';
-@import '../../assets/flex.less';
+@import "../../assets/design.less";
+@import "../../assets/flex.less";
 
 .editor {
-    width: 100%;
-    display: flex;
-    height: calc(100vh - 91px);
-    .active {
-        background-color: rgba(0, 0, 0, 0.2);
+  width: 100%;
+  display: flex;
+  height: calc(100vh - 91px);
+  .active {
+    background-color: rgba(0, 0, 0, 0.2);
+  }
+  &__menu {
+    width: 100px;
+    height: 100%;
+    background-color: #9a77e5;
+    .flex-display(flex);
+    .flex-direction(column);
+    .align-items(center);
+    &_tab {
+      margin: 10px 15px;
+      padding: 6px;
+      border-radius: 14px;
+      cursor: pointer;
+      .transition(0.5s);
+      .img {
+        display: block;
+        margin: 0 auto;
+      }
+      .text {
+        display: block;
+        text-align: center;
+        font-size: 12px;
+        color: white;
+        font-weight: 600;
+      }
     }
-    &__menu {
-        width: 100px;
-        height: 100%;
-        background-color: #9A77E5;
+    &_tab:first-child {
+      margin: 25px 15px 10px 15px;
+    }
+    &_tab:hover {
+      background-color: rgba(0, 0, 0, 0.2);
+    }
+  }
+
+  &__settings {
+    width: 410px;
+    @media (max-width: 1380px) {
+        width: 320px;
+    }
+    height: 100%;
+    background-color: #f5f5f5;
+    overflow-y: hidden;
+    &_media-and-photo {
+      input {
+        display: block;
+        padding: 9px 47px;
+        .border-radius(5px);
+        margin: 33px 0 20px 10px;
+        outline: none;
+        border: none;
+        font-size: 16px;
+        font-weight: 400;
+        color: #7b7c7d;
+        @media (max-width: 1380px) {
+            width: 180px;
+        }
+      }
+      .input::before {
+        display: block;
+        position: absolute;
+        transform: translate(20px, 10px);
+        content: " ";
+        width: 20px;
+        height: 20px;
+        background: url("../../assets/images/search.svg");
+      }
+      .input::after {
+        display: block;
+        position: absolute;
+        transform: translate(320px, -48px);
+        content: " ";
+        width: 23px;
+        height: 20px;
+        background: url("../../assets/images/camera.svg");
+        @media (max-width: 1380px) {
+            transform: translate(250px, -48px);
+        }
+      }
+      .templates {
         .flex-display(flex);
         .flex-direction(column);
-        .align-items(center);
-        &_tab {
-            margin: 10px 15px;
-            padding: 6px;
-            border-radius: 14px;
+        margin-left: 10px;
+        position: relative;
+        overflow-y: scroll !important;
+        height: 76vh;
+        pointer-events: auto;
+        .btns {
+          max-width: 90%;
+          button {
+            padding: 10px 22px;
+            outline: none;
+            background-color: white;
+            border: 1px solid #69696a;
+            border-radius: 10px;
+            color: #69696a;
+            margin: 7px 8px 0 0;
             cursor: pointer;
-            .transition(0.5s);
-            .img {
-                display: block;
-                margin: 0 auto;
+          }
+        }
+        .media {
+          .flex-display(flex);
+          .flex-wrap(wrap);
+          max-width: 90%;
+          margin-top: 10px;
+          height: 100%;
+          div {
+            width: 163px;
+            margin: 9px 7px 0 0;
+            @media (max-width: 1380px) {
+                width: 110px;
             }
-            .text {
-                display: block;
-                text-align: center;
-                font-size: 12px;
-                color: white;
-                font-weight: 600;
+            img {
+              width: 100%;
             }
+          }
+         
         }
-        &_tab:first-child {
-            margin: 25px 15px 10px 15px;
-        }
-        &_tab:hover {
-            background-color: rgba(0, 0, 0, 0.2);
-        }
+      }
     }
+  }
+  &__canvas {
+    .flex-display(flex);
+    .flex-direction(column);
+    .justify-content(space-between);
+    flex-grow: 1;
+    &_media-control {
+      .flex-display(flex);
+      .justify-content(space-between);
+      border-bottom: 1px solid #dcdcdc;
 
-    &__settings {
-        width: 410px;
-        height: 100%;
-        background-color: #F5F5F5;
-        overflow-y: hidden;
-        &_media-and-photo {
-            input {
-                display: block;
-                padding: 9px 47px;
-                .border-radius(5px);
-                margin: 33px 0 20px 10px;
-                outline: none;
-                border: none;
-                font-size: 16px;
-                font-weight: 400;
-                color: #7B7C7D;
-            }
-            .input::before {
-                display: block;
-                position: absolute;
-                transform: translate(20px, 10px);
-                content: ' ';
-                width: 20px;
-                height: 20px;
-                background: url("../../assets/images/search.svg");
-            }
-            .input::after {
-                display: block;
-                position: absolute;
-                transform: translate(320px, -48px);
-                content: ' ';
-                width: 23px;
-                height: 20px;
-                background: url("../../assets/images/camera.svg");
-            }
-            .templates {
-                .flex-display(flex);
-                .flex-direction(column);
-                margin-left: 10px;
-                position:relative;
-                overflow-y: scroll !important;
-                height: 800px;
-                pointer-events: auto;
-                .btns {
-
-                    max-width: 90%;
-                    button {
-                        padding: 10px 22px;
-                        outline: none;
-                        background-color: white;
-                        border: 1px solid #69696A;
-                        border-radius: 10px;
-                        color: #69696A;
-                        margin: 7px 8px 0 0;
-                        cursor: pointer;
-                    }
-                }
-                .media {
-                    .flex-display(flex);
-                    .flex-wrap(wrap);
-                    max-width: 90%;
-                    margin-top: 10px;
-                    div {
-                        width: 163px;
-                        margin: 9px 7px 0 0;
-                        img {
-                            width: 100%;
-                        }
-                    }
-                    
-                }
-            }
-           
+      .first-flex {
+        margin: 20px 25px;
+        .flex-display(flex);
+        .nav {
+          display: inline-block;
+          transform: translate(0, 7px);
+         img:first-child {
+          margin-right: 20px;
+         }
         }
+        .setting {
+          padding: 0;
+          .flex-display(flex);
+
+          .item {
+            list-style: none;
+            margin-left: 30px;
+            font-size: 18px;
+            font-weight: 400;
+          }
+        }
+      }
+      .second-flex {
+        margin: 20px 25px;
+        .flex-display(flex);
+        .setting {
+          padding: 0;
+          .flex-display(flex);
+
+          .item {
+            list-style: none;
+            margin-left: 30px;
+            font-size: 18px;
+            font-weight: 400;
+            img {
+              transform: translate(0, 5px);
+            }
+          }
+        }
+      }
+     
     }
+    .resize {
+        .flex-display(flex);
+        .justify-content(center);
+        margin-bottom: 50px;
+    }
+  }
 }
