--- a/src/features/Menu/Menu.less
+++ b/src/features/Menu/Menu.less
@@ -241,6 +241,7 @@ a {
         }
         img {
           margin-right: 10px;
+          display: inline-block;
         }
       }
     }
@@ -392,6 +393,9 @@ a {
         padding: 0;
         a {
           color: black;
+          img {
+            display: inline-block;
+          }
         }
       }
     }
