--- a/src/index.less
+++ b/src/index.less
@@ -1,8 +1,17 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @import "../src/assets/flex.less";
 @import "../src/assets/design.less";
 @import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap");
 @import './pages/Home/Home.less';
+
+
+
+@import "nouislider/distribute/nouislider.css";
+
 body {
   margin: 0;
   padding: 0;
@@ -88,4 +97,34 @@ body {
 
 .format-settings {
   
+}
+
+
+
+/// SLIDER
+
+.noUi-touch-area {
+  border-radius: 50%;
+}
+.noUi-handle, .noUi-handle-upper {
+  border-radius: 50%;
+  background-color: #571CD3;
+  width: 20px;
+  height: 20px;
+  border: none;
+  outline: 0;
+  cursor: pointer;
+}
+.noUi-horizontal {
+  height: 6px;
+  background: #D9D9D9;
+  border: none;
+}
+.noUi-horizontal .noUi-handle {
+  box-shadow: none;
+  width: 20px;
+  height: 20px;
+}
+.noUi-handle::before, .noUi-handle::after {
+  display: none;
 }
