--- a/src/pages/GraphicsEditor/GraphicsEditor.less
+++ b/src/pages/GraphicsEditor/GraphicsEditor.less
@@ -42,13 +42,53 @@
   }
 
   &__settings {
+    min-width: 410px;
     width: 410px;
     @media (max-width: 1380px) {
+        min-width: 320px;
         width: 320px;
     }
     height: 100%;
     background-color: #f5f5f5;
     overflow-y: hidden;
+    &_box {
+      position: relative;
+      overflow-y: scroll !important;
+      height: 76vh;
+      pointer-events: auto;
+      h2 {
+        margin: 26px 20px;
+        font-size: 18px;
+        font-weight: 400;
+      }
+      &-settings {
+        padding: 23px 13px;
+        border-radius: 14px;
+        background-color: white;
+        margin: 20px 8px 0 8px;
+      }
+      .settings__block {
+        margin-bottom: 20px;
+        &_name {
+          .flex-display(flex);
+          .justify-content(space-between);
+          span:first-child {
+            font-size: 12px;
+            display: block;
+            margin-bottom: 12px;
+            padding: 5px 0;
+          }
+          span:last-child {
+            font-size: 12px;
+            display: block;
+            padding: 5px 12px;
+            margin-bottom: 12px;
+            border: 1px solid #D9D9D9;
+            border-radius:10px;
+          }
+        }
+      }
+    }
     &_media-and-photo {
       input {
         display: block;
@@ -115,6 +155,9 @@
           div {
             width: 163px;
             margin: 9px 7px 0 0;
+            cursor: pointer;
+
+            transition: 0.5s;
             @media (max-width: 1380px) {
                 width: 110px;
             }
@@ -122,7 +165,9 @@
               width: 100%;
             }
           }
-         
+          div:hover {
+            filter: brightness(60%)
+          }
         }
       }
     }
@@ -151,11 +196,17 @@
           padding: 0;
           .flex-display(flex);
 
+          .active {
+            background-color: #F5F5F5;
+          }
           .item {
+            padding: 0 5px;
+            border-radius: 5px;
             list-style: none;
             margin-left: 30px;
             font-size: 18px;
             font-weight: 400;
+            cursor: pointer;
           }
         }
       }
@@ -165,14 +216,15 @@
         .setting {
           padding: 0;
           .flex-display(flex);
-
           .item {
             list-style: none;
             margin-left: 30px;
             font-size: 18px;
             font-weight: 400;
+            cursor: pointer;
             img {
               transform: translate(0, 5px);
+              cursor: pointer;
             }
           }
         }
@@ -184,5 +236,18 @@
         .justify-content(center);
         margin-bottom: 50px;
     }
+    &_media {
+      .flex-display(flex);
+      .justify-content(center);
+      .align-items(center);
+      img {
+        transform: scale(2);
+      }
+    }
   }
+}
+
+
+.canvas {
+  
 }
