--- a/src/pages/GraphicsEditor/GraphicsEditor.less
+++ b/src/pages/GraphicsEditor/GraphicsEditor.less
@@ -4,7 +4,8 @@
 .editor {
   width: 100%;
   display: flex;
-  height: calc(100vh - 91px);
+  // height: calc(100vh - 91px);
+  height: 100vh;
   .active {
     background-color: rgba(0, 0, 0, 0.2);
   }
@@ -54,7 +55,7 @@
     &_box {
       position: relative;
       overflow-y: scroll !important;
-      height: 76vh;
+      height: 90vh;
       pointer-events: auto;
       h2 {
         margin: 26px 20px;
@@ -67,8 +68,35 @@
         background-color: white;
         margin: 20px 8px 0 8px;
       }
+      &-filter {
+        padding: 23px 13px;
+        border-radius: 14px;
+        background-color: white;
+        margin: 20px 8px 0 8px;
+
+      .item-slider {
+        .flex-display(flex);
+        text-align: center;
+        .item:not(.item:last-child) {
+          margin-right: 8px;
+          
+        }
+        .item {
+          cursor: pointer;
+        }
+      }
+      }
+      .arrows {
+        .flex-display(flex);
+        .justify-content(center);
+        button {
+          margin: 10px;
+        }
+      }
       .settings__block {
         margin-bottom: 20px;
+
+       
         &_name {
           .flex-display(flex);
           .justify-content(space-between);
@@ -131,7 +159,7 @@
         margin-left: 10px;
         position: relative;
         overflow-y: scroll !important;
-        height: 76vh;
+        height: 90vh;
         pointer-events: auto;
         .btns {
           max-width: 90%;
@@ -181,7 +209,7 @@
       .flex-display(flex);
       .justify-content(space-between);
       border-bottom: 1px solid #dcdcdc;
-
+      margin-bottom: 50px;
       .first-flex {
         margin: 20px 25px;
         .flex-display(flex);
@@ -248,6 +276,6 @@
 }
 
 
-.canvas {
+// .canvas {
   
-}
+// }
