в процессе перехода на tailwind

--- a/src/index.less
+++ b/src/index.less
@@ -17,10 +17,14 @@ body {
   background: white;
 }
 
+.n-j-list .active, .n-j-list:hover a  { 
+  background-color: #EDECEC;
+}
+
 .home__creatiqa {
   font-family: "Comfortaa";
   background: linear-gradient(
-    270deg,
+    270deg, 
     rgba(255, 51, 133, 0.53) -20.67%,
     rgba(87, 28, 211, 0.78) 82.4%,
     #00acac 100%
