--- a/src/index.less
+++ b/src/index.less
@@ -78,6 +78,11 @@ body {
       transform: translate(250px, -48px);
   }
 }
+.editor-menu .active {
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+
 /// SLIDER
 
 .noUi-touch-area {
@@ -108,13 +113,10 @@ body {
   
 
 
-
-
-
-
-
-
-
+//KONVA-JS STYLES
+.konvajs-content {
+  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.55);
+}
 
 
 
@@ -134,3 +136,4 @@ body {
 input {
   font-family: "Source Sans Pro";
 }
+
